tests/negative/gold/while_test.gold
tests/negative/while_test.toit:4:8: error: Incomplete expression
  while
       ^
tests/negative/while_test.toit:4:8: error: Missing ':' for loop condition
  while
       ^
tests/negative/while_test.toit:6:5: error: Missing ':' for loop condition
    print unresolved
    ^~~~~
tests/negative/while_test.toit:7:15: error: Missing ':' for loop condition
  while break print unresolved
              ^~~~~
tests/negative/while_test.toit:8:12: error: Incomplete expression
  while "".
           ^
tests/negative/while_test.toit:8:12: error: Missing ':' for loop condition
  while "".
           ^
tests/negative/while_test.toit:9:8: error: Missing condition
  while:
       ^
tests/negative/while_test.toit:5:9: error: 'break' must be inside loop
  while break
        ^~~~~
tests/negative/while_test.toit:6:11: error: Unresolved identifier: 'unresolved'
    print unresolved
          ^~~~~~~~~~
tests/negative/while_test.toit:7:9: error: 'break' must be inside loop
  while break print unresolved
        ^~~~~
tests/negative/while_test.toit:7:21: error: Unresolved identifier: 'unresolved'
  while break print unresolved
                    ^~~~~~~~~~
tests/negative/while_test.toit:10:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
